# cgma

./: AssemblySM.cpp  AssemblySM.hpp  CMakeLists.txt  Csys.cpp  Csys.hpp  CsysOE.cpp  CsysOE.hpp  KNOWN_ISSUES  LICENSE.CGM  Makefile.am  OtherEntity.cpp  OtherEntity.hpp  OtherRefEntity.cpp  OtherRefEntity.hpp  OtherSolidModelEntity.cpp  OtherSolidModelEntity.hpp  PartSM.cpp  PartSM.hpp  README.CGM  README.CONFIGURE  README.OCC  README.OpenCascade  ReadMe.mkd  RefAssembly.cpp  RefAssembly.hpp  RefCoordSys.cpp  RefCoordSys.hpp  RefPart.cpp  RefPart.hpp  SyncTool.cpp  SyncTool.hpp  acsite.m4  cgm.cmake.in  cgm.make  cgm.make.in  cgm_version.h  configure.ac  configure.in
amendment/: AutoMidsurfaceTool.cpp  AutoMidsurfaceTool.hpp  CAEntitySense.cpp  CAEntitySense.hpp  CAEntityTol.cpp  CAEntityTol.hpp  CGMHistory.cpp  CGMHistory.hpp  CubitCompat.h  CubitFileSimModel.cpp  CubitUndo.cpp  GfxPreview.hpp  LocalToleranceTool.cpp  LocalToleranceTool.hpp  Makefile.am
cgm_apps/examples/: CMakeLists.txt  Makefile.am  README
geom/: AllocMemManagersGeom.cpp  AnalyticGeometryTool.cpp  AnalyticGeometryTool.hpp  AutoMidsurfaceTool.cpp  BasicTopologyEntity.cpp  BasicTopologyEntity.hpp  Body.cpp  Body.hpp  BodySM.cpp  BodySM.hpp  BoundingBoxTool.cpp  BoundingBoxTool.hpp  BridgeManager.cpp  BridgeManager.hpp  CAActuateSet.cpp  CAActuateSet.hpp  CADeferredAttrib.cpp  CADeferredAttrib.hpp  CADefines.hpp  CAEntityColor.cpp  CAEntityColor.hpp  CAEntityId.cpp  CAEntityId.hpp  CAEntityName.cpp  CAEntityName.hpp  CAEntitySense.cpp  CAEntitySense.hpp  CAEntityTol.cpp  CAEntityTol.hpp  CAGroup.cpp  CAGroup.hpp  CAMergePartner.cpp  CAMergePartner.hpp  CAMergeStatus.cpp  CAMergeStatus.hpp  CASourceFeature.cpp  CASourceFeature.hpp  CAUniqueId.cpp  CAUniqueId.hpp  CGMApp.cpp  (+176 more)
geom/ACIS/: AcisBridge.cpp  AcisBridge.hpp  AcisDrawTool.cpp  AcisDrawTool.hpp  AcisEdgeTool.cpp  AcisEdgeTool.hpp  AcisFacetManager.cpp  AcisFacetManager.hpp  AcisFeatureEngine.cpp  AcisFeatureEngine.hpp  AcisHealerTool.cpp  AcisHealerTool.hpp  AcisModifyEngine.cpp  AcisModifyEngine.hpp  AcisQueryEngine.cpp  AcisQueryEngine.hpp  AcisSurfaceTool.cpp  AcisSurfaceTool.hpp  AcisToolUtil.cpp  AcisToolUtil.hpp  AcisTweakTool.cpp  AcisTweakTool.hpp  AcisTypes.h  BodyACIS.cpp  BodyACIS.hpp  CMakeLists.txt  CoEdgeACIS.cpp  CoEdgeACIS.hpp  CurveACIS.cpp  CurveACIS.hpp  InstallACIS.cmake.in  LoopACIS.cpp  LoopACIS.hpp  LumpACIS.cpp  LumpACIS.hpp  Makefile.am  Makefile.in  PointACIS.cpp  PointACIS.hpp  ShellACIS.cpp  (+12 more)
geom/CVS/: Entries  Repository
geom/Cholla/: AllocMemManagersCholla.cpp  BoundaryConstrainTool.cpp  BoundaryConstrainTool.hpp  CMakeLists.txt  Cholla.cpp  Cholla.h  ChollaCurve.cpp  ChollaCurve.hpp  ChollaEngine.cpp  ChollaEngine.hpp  ChollaEntity.cpp  ChollaEntity.hpp  ChollaMesh.cpp  ChollaMesh.hpp  ChollaPoint.cpp  ChollaPoint.hpp  ChollaSkinTool.cpp  ChollaSkinTool.hpp  ChollaSurface.cpp  ChollaSurface.hpp  ChollaVolume.cpp  ChollaVolume.hpp  ChordalAxis.cpp  ChordalAxis.hpp  CubitFacet.cpp  CubitFacet.hpp  CubitFacetData.cpp  CubitFacetData.hpp  CubitFacetEdge.cpp  CubitFacetEdge.hpp  CubitFacetEdgeData.cpp  CubitFacetEdgeData.hpp  CubitPoint.cpp  CubitPoint.hpp  CubitPointData.cpp  CubitPointData.hpp  CubitQuadFacet.cpp  CubitQuadFacet.hpp  CubitQuadFacetData.cpp  CubitQuadFacetData.hpp  (+42 more)
geom/OCC/: CMakeLists.txt  FacetboolInterface.cpp  FacetboolInterface.hpp  FindOpenCascade.cmake  GridSearchTree.hpp  Makefile.am  OCCAttrib.cpp  OCCAttrib.hpp  OCCAttribSet.cpp  OCCAttribSet.hpp  OCCBody.cpp  OCCBody.hpp  OCCCoEdge.cpp  OCCCoEdge.hpp  OCCCoFace.cpp  OCCCoFace.hpp  OCCCurve.cpp  OCCCurve.hpp  OCCDrawTool.cpp  OCCDrawTool.hpp  OCCGeometryCreator.hpp  OCCHistory.cpp  OCCHistory.hpp  OCCHistory.lo  OCCLoop.cpp  OCCLoop.hpp  OCCLump.cpp  OCCLump.hpp  OCCModifyEngine.cpp  OCCModifyEngine.cpp_2493  OCCModifyEngine.cpp_2494  OCCModifyEngine.cpp_5132  OCCModifyEngine.cpp_5345  OCCModifyEngine.hpp  OCCParamTool.cpp  OCCParamTool.hpp  OCCPoint.cpp  OCCPoint.hpp  OCCQueryEngine.cpp  OCCQueryEngine.hpp  (+20 more)
geom/SolidWorks/: BodySW.cpp  BodySW.hpp  CoEdgeSW.cpp  CoEdgeSW.hpp  CurveSW.cpp  CurveSW.hpp  LoopSW.cpp  LoopSW.hpp  LumpSW.cpp  LumpSW.hpp  (+21 more)
init/: CMakeLists.txt  InitCGMA.cpp  InitCGMA.hpp  Makefile  Makefile.am
itaps/: CATag.cpp  CATag.hpp  CGMAIterator.hpp  CGMA_ACIS.cc  CGMA_ACIS.h  CGM_iGeom.h  CMakeLists.txt  Makefile.am  brick_2.sat  brick_2.stp  chaman.cc  copy_attrib.cpp  iBase.h  iBase_FCDefs.h  iGeom-Defs.inc.in  iGeom.dox  iGeom.h  iGeomError.cc  iGeomError.h  iGeom_CGMA.cc  iGeom_FCDefs.h  iGeom_private.h  iGeom_protos.h  ilc_13body.stp  ilc_1body.stp  ilc_problem_surf8.stp  partest.cpp  size.sat  test_edge_orient.cc  testgeom.cc  testgeom.sat
test/: 62_shaver1.brep  66_shaver3.brep  72_shaver6.brep  AngleCalc.cpp  CreateGeometry.cpp  Cylinder_1.brep  Cylinder_2.brep  GraphicsData.cpp  Line_1.brep  Line_2.brep  Makefile.am  Solid_2.brep  Solid_6.brep  Solid_7.brep  TestUtilities.hpp  aftersub.occ_ref  attribute_to_buffer.cpp  attribute_to_file.cpp  beforesub.occ_ref  box-w-hole.brep  brick.cpp  cduct.igs  cub_model.step  cylinders.cpp  diffuser.iges  ex2.iges  ex3.iges  facets.cpp  facets_README  hollow.sat  hollow_acis.cpp  huge.sat  imprint_bug.cpp  init.cpp  loft.cpp  makept.cpp  merge.sat  merge_test.cpp  model1.sat  model2.sat  (+32 more)
util/: AbstractTree.hpp  AllocMemManagersList.cpp  AppUtil.cpp  AppUtil.hpp  ArrayBasedContainer.cpp  ArrayBasedContainer.hpp  CMakeLists.txt  CastTo.hpp  CommandFeedback.hpp  CpuTimer.cpp  CpuTimer.hpp  Cubit2DPoint.cpp  Cubit2DPoint.hpp  CubitBox.cpp  CubitBox.hpp  CubitBoxStruct.h  CubitCollection.cpp  CubitCollection.hpp  CubitColorConstants.hpp  CubitConcurrentApi.cpp  CubitConcurrentApi.h  CubitContainer.cpp  CubitContainer.hpp  CubitCoordinateSystem.cpp  CubitCoordinateSystem.hpp  CubitDefines.h  CubitDynamicLoader.cpp  CubitDynamicLoader.hpp  CubitEntity.cpp  CubitEntity.hpp  CubitEquation.hpp  CubitEvent.hpp  CubitEventDefines.h  CubitEventDispatcher.cpp  CubitEventDispatcher.hpp  CubitFile.cpp  CubitFile.hpp  CubitFileFEModel.cpp  CubitFileFEModel.hpp  CubitFileIOWrapper.cpp  (+157 more)
(+453 files in other folders)
